--- a/ConsoleApp3/ConsoleApp3.csproj
+++ b/ConsoleApp3/ConsoleApp3.csproj
@@ -179,5 +179,8 @@
     <None Include="packages.config" />
     <None Include="sols\Class1.sol" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="notes.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
