--- a/ConsoleApp4/WebApplication5/WebApplication5.csproj
+++ b/ConsoleApp4/WebApplication5/WebApplication5.csproj
@@ -22,7 +22,7 @@
     <ProjectReference Include="..\BankSystem.Core\BankSystem.Core.csproj" />
     <ProjectReference Include="..\BankSystem.Data\BankSystem.Data.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\Energy.Business\Energy.Business.csproj" />
+    <ProjectReference Include="..\EnergyConsumption.Business\EnergyConsumption.Business.csproj" />
     <ProjectReference Include="..\EnergyConsumption.Data\EnergyConsumption.Data.csproj" />
   </ItemGroup>
 
