--- a/Console4_300/ContractDeployConsole/ContractDeployConsole.csproj
+++ b/Console4_300/ContractDeployConsole/ContractDeployConsole.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    <ProjectReference Include="..\EnergyConsumption.Business\EnergyConsumption.Business.csproj" />
   </ItemGroup>
 
 </Project>
